# servus

./: .gitignore  Cargo.toml  create_db.sql  readme.md  servus.service  shell.nix
angular_test/: index.html
angular_test/js/: site.js
migrations/2020-03-21-104202_create_db/: up.sql
migrations/2020-03-26-193413_create_db/: up.sql
scripts/: build.sh  install_servus.sh  run_servus.sh
servus/: Cargo.toml
servus.bak/: .env  Cargo.toml  agent.sh
servus.bak/src/: main.rs
servus.bak/src/data_access_layer/: mod.rs  target.rs  tx_log.rs  user.rs
servus.bak/src/ssh/: mod.rs
servus.bak/src/web/: mod.rs
servus.bak/static/: style.css
servus/migrations/2020-03-26-193413_create_db/: down.sql  up.sql
servus/src/lib/: lib.rs  schema.rs
servus/src/lib/entity/: error.rs  mod.rs
servus/src/lib/persistence/: job.rs  machine.rs  mod.rs  readme.md  user.rs
servus/static/: index.html  jobs.html  log.html  machines.html  users.html
servus/static/css/: checkbox.css  modal.css  style.css
servus/static/js/: site.js
src/: daemon.rs  main.rs  schema.rs
src/data_access_layer/: job.rs
src/lib/: lib.rs  schema.rs
src/lib/entity/: mod.rs  readme.md
src/lib/execution/: mod.rs  readme.md
src/lib/persistence/: job.rs  log.rs  log.rs.orig  machine.rs  mod.rs  user.rs
src/lib/web/: job.rs  log.rs  machine.rs  mod.rs  readme.md  user.rs
src/mail/: mod.rs
src/model/: user.rs
static/: index.html  jobs.html  log.html  machines.html  users.html
static/css/: modal.css  site.css
static/js/: site.js
templates/: _sidepanel.hbs  machines.hbs
test/: test_request.sh
ui/: index.html
