[package]
name = "servus"
version = "0.1.1"
authors = ["Vladimír Ctibor <vladimir.ctibor@gmail.com>"]
edition = "2018"
description = "Server for running periodic tasks."
license = "GPL-3.0-only"
build = "build.rs"

[lib]
name = "servus"
path = "src/lib/lib.rs"

[build-dependencies]
actix-web-static-files = "2.0"

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
actix-web = "2.0"
actix-rt = "1.0"
actix-files = "0.2"
actix-http = "1.0.1"
actix-web-static-files = "2.0"
diesel = { version = "1.4", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
diesel_migrations = "1.4"
dotenv = "0.9"
r2d2 = "0.8"
futures = "0.3"
env_logger = "0.6"
chrono = { version = "0.4", features = ["serde"] }
ssh2 = "0.6"
job_scheduler = "1.1"
tokio = { version = "0.2", features = ["full"] }

[package.metadata.deb]
depends = "$auto"
assets = [
    ["target/release/servus", "usr/bin/servus", "755"],
    ["servus.service", "/lib/systemd/system/servus.service", "644"], 
]