[package]
name = "servus"
version = "0.1.0"
authors = ["Vladimír Ctibor <vladimir.ctibor@gmail.com>"]
edition = "2018"
description = "Server for running periodic tasks."
license = "GPL-3.0-only"

[lib]
name = "servus"
path = "src/lib/lib.rs"

[dependencies]
uuid = { version = "0.6", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
actix-web = "2.0"
actix-rt = "1.0"
diesel = { version = "1.4", features = ["postgres", "uuid", "r2d2"] }
dotenv = "0.9"
r2d2 = "0.8"
futures = "0.3.1"